--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+
+body {
+    background-image: url('https://staticctf.ubisoft.com/J3yJr34U2pZ2Ieem48Dwy9uqj5PNUQTn/4CLQ7rHCOOYZwZGVJZLtxP/c67a68fb52ad5b8325a4214d17302a82/JD24_KEYART_BACKGROUND_ONLY.png'); // Ruta de tu imagen
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    min-height: 100vh;
+    margin: 0;
+    padding: 0;
+  }
